--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,11 +46,10 @@ nav a:hover {
 .game-container {
   width: 80%;
   padding: 0 20px;
-  margin: 40px auto;
+  margin: 10px auto;
 }
 
 .game-list {
-  margin: 40px auto;
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
   grid-gap: 40px;
@@ -65,13 +64,17 @@ nav a:hover {
 }
 
 .game-card:hover {
-  transform: translateY(-5px);
+  transform: translateY(-3px);
 }
 
 .game-card img {
   width: 100%;
   height: 200px;
   object-fit: cover;
+}
+
+.game-card:hover img {
+  transform: scale(1.05);
 }
 
 .game-info {
@@ -81,9 +84,10 @@ nav a:hover {
 .game-info h3 {
   margin-top: 0;
 }
+
 .game-info p {
   margin: 0;
-  width: 320px;
+  width: 100%;
   white-space: nowrap;
   white-space: nowrap;
   overflow: hidden;
@@ -98,11 +102,11 @@ nav a:hover {
 }
 
 .play-game a {
-  color: #fff;
+  color: #ffffff;
   text-decoration: none;
   margin: auto;
   display: inline-block;
-  background-color: #ff6b6b;
+  background-color: #a14040;
   padding: 10px 20px;
   border-radius: 5px;
   transition: background-color 0.3s;
@@ -110,7 +114,7 @@ nav a:hover {
 }
 
 .play-game a:hover {
-  background-color: #a14040;
+  background-color: #8b3838;
 }
 
 footer {
@@ -118,4 +122,10 @@ footer {
   color: #fff;
   padding: 10px;
   text-align: center;
+}
+
+@media screen and (max-width: 768px) {
+  .game-list {
+    grid-template-columns: 1fr;
+  }
 }
