--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,8 +49,10 @@ nav a:hover {
   margin: 10px auto;
 }
 
-.ad-container{
+.ad-container {
   margin: 1rem 0;
+  display: flex;
+  justify-content: center;
 }
 
 .game-list {
